--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "mcp-server": "./build/index.js"
     },
     "scripts": {
-        "build": "tsc && chmod 755 build/index.js"
+        "build": "tsc"
     },
     "files": [
         "build"
